Fix fade effect on top of scrollbar issue
Because it is is fixed it appears on top of that elements scrollbar which looks bad. Good news is that it doesn't need to be the full width anyway.

--- a/src/components/ShoppingCart/ShoppingCart.scss
+++ b/src/components/ShoppingCart/ShoppingCart.scss
@@ -84,7 +84,7 @@ $quantity-btn-line-length: 8px;
     .shopping-cart-items::after {
         position: fixed;
         left: 0;
-        width: 100%;
+        width: 95%; // It appears ontop of the scrollbar so make it a little shorter
         content: "";
         height: 18px;
         bottom: 83px;
